--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,13 @@ version: '3'
 services: 
   web:
     build: .
+    command: python ./ manage.py makemigrations restaurants
+    command: python ./manage.py migrate
     command: python ./manage.py runserver 0.0.0.0:3001
     ports: - "3001:3001"
-    
+  web2:
+    build: .
+    command: python ./ manage.py makemigrations restaurants
+    command: python ./manage.py migrate
+    command: python ./manage.py runserver 0.0.0.0:3002
+    ports: - "3002:3002"
